--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	compileOnly('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	implementation 'org.webjars:jquery:3.5.0'
+    implementation 'org.webjars:bootstrap:4.4.1-1'
 }
 
 test {
