--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+    compileOnly {
+            extendsFrom annotationProcessor
+    }
+}
+
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-jdbc')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
@@ -20,6 +26,7 @@ dependencies {
 	runtimeOnly('com.h2database:h2')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	compileOnly('org.projectlombok:lombok')
+	annotationProcessor('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation 'org.webjars:jquery:3.5.0'
     implementation 'org.webjars:bootstrap:4.4.1-1'
