HEROKU App、及びPostgres の差し替え（削除・新規作成）によるエラーが残存状態。build.gradle, application.propertiesを修正しているが、変わらず、コアラの登録ができない状態となっている。

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	runtimeOnly('com.h2database:h2')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
-	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly ('org.postgresql:postgresql')
 	compileOnly('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
