--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+targetCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -19,6 +20,16 @@ configurations {
 }
 
 dependencies {
+	
+	compile("org.springframework.boot:spring-boot-starter-web") {
+	exclude module: "spring-boot-starter-tomcat"
+	  }
+	  compile("org.springframework.boot:spring-boot-starter-jetty")
+	  // end::jetty[]
+	  // tag::actuator[]
+	  compile("org.springframework.boot:spring-boot-starter-actuator")
+	  // end::actuator[]
+  	testCompile("junit:junit")
 	implementation('org.springframework.boot:spring-boot-starter-jdbc')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-validation')
