--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation 'org.webjars:jquery:3.5.0'
     implementation 'org.webjars:bootstrap:4.4.1-1'
+    implementation 'org.webjars:webjars-locator:0.40'
 }
 
 test {
