--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.jpa.show-sql = true
+
+#データベース接続情報追加
 spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASS}
-spring.datasource.driverClassName = org.postgresql.Driver
 server.port=${PORT:8080}
+
+#postgresqlドライバの追加
+spring.datasource.driverClassName = org.postgresql.Driver
+
+#hikariCPの最低プールサイズ、最大接続数
+spring.datasource.hikari.minimum-idle=4
+spring.datasource.hikari.maximum-pool-size=4
+
