cloudinary接続機能と二度押し防止機能とコアラ追加編集画面の不具合を修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.driverClassName = org.postgresql.Driver
 spring.datasource.hikari.minimum-idle=4
 spring.datasource.hikari.maximum-pool-size=4
 
+#cloudinary接続情報
+com.cloudinary.cloud_name=${CLOUD_NAME}
+com.cloudinary.api_key=${CLOUD_API_KEY}
+com.cloudinary.api_secret=${CLOUD_API_SECRET}
+com.cloudinary.image.url=https://res.cloudinary.com/honx7tf4c/image/upload/v1619800911/koala/
