--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,12 @@ configurations {
     }
 }
 
+jar
+{
+	baseName = 'spring-cloudinary'
+	version = '0.1.0'
+}
+
 dependencies {
 	
 	compile("org.springframework.boot:spring-boot-starter-web") {
@@ -43,6 +49,7 @@ dependencies {
 	implementation 'org.webjars:jquery:3.5.0'
     implementation 'org.webjars:bootstrap:4.4.1-1'
     implementation 'org.webjars:webjars-locator:0.40'
+    implementation('com.cloudinary:cloudinary-http44:1.29.0')
 }
 
 test {
