コアラ登録の動物園の入力フォーム、バリデーション、SQLなどをデータベースの修正に合わせて改修した。

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 	implementation 'org.webjars:jquery:3.5.0'
     implementation 'org.webjars:bootstrap:4.4.1-1'
     implementation 'org.webjars:webjars-locator:0.40'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 test {
