--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ com.cloudinary.cloud_name=${CLOUD_NAME}
 com.cloudinary.api_key=${CLOUD_API_KEY}
 com.cloudinary.api_secret=${CLOUD_API_SECRET}
 com.cloudinary.image.url=https://res.cloudinary.com/honx7tf4c/image/upload/v1619800911/koala/
+
+#Twitter連携情報
+spring.social.twitter.app-id=${TWITTER_API}
+spring.social.twitter.app-secret=${TWITTER_SECRET}
+spring.social.twitter.callback-url=${TWITTER_CALLBACK_URL}
