--- a/build.gradle
+++ b/build.gradle
@@ -46,11 +46,12 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
-	implementation 'org.webjars:jquery:3.5.0'
-    implementation 'org.webjars:bootstrap:4.4.1-1'
-    implementation 'org.webjars:webjars-locator:0.40'
+	implementation ('org.webjars:jquery:3.5.0')
+    implementation ('org.webjars:bootstrap:4.4.1-1')
+    implementation ('org.webjars:webjars-locator:0.40')
     implementation('com.cloudinary:cloudinary-http44:1.29.0')
     implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.thymeleaf.extras:thymeleaf-extras-springsecurity5')
 	implementation('org.twitter4j:twitter4j-core:4.0.7')
 }
 
