プロフィール画像更新

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,13 @@ spring.datasource.hikari.maximum-pool-size=4
 com.cloudinary.cloud_name=${CLOUD_NAME}
 com.cloudinary.api_key=${CLOUD_API_KEY}
 com.cloudinary.api_secret=${CLOUD_API_SECRET}
-com.cloudinary.image.url=https://res.cloudinary.com/honx7tf4c/image/upload/v1619800911/koala/
+com.cloudinary.image.url=https://res.cloudinary.com/honx7tf4c/image/upload/koala/
 
 #Twitter連携情報
 spring.social.twitter.app-id=${TWITTER_API}
 spring.social.twitter.app-secret=${TWITTER_SECRET}
 spring.social.twitter.callback-url=${TWITTER_CALLBACK_URL}
+
+#画像アップロード上限サイズ
+spring.servlet.multipart.max-file-size=3MB
+spring.servlet.multipart.max-request-size=3MB
