--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 	runtimeOnly('com.h2database:h2')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	runtimeOnly ('org.postgresql:postgresql')
-	compileOnly('org.projectlombok:lombok')
+	implementation('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation ('org.webjars:jquery:3.5.0')
