修正箇所多数。動物園履歴のバリデーションを実装する前提として、エンティティやフォームの改修を実施。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,6 @@ spring:
       app-secret: ${TWITTER_SECRET}
       callback-url: ${TWITTER_CALLBACK_URL}
       autoLoginKey: ${AUTO_LOGIN_KEY}
+      
+  messages:
+    basename: messages, ValidationMessages
