--- a/build.gradle
+++ b/build.gradle
@@ -20,24 +20,16 @@ configurations {
     }
 }
 
-jar
-{
+jar {
 	baseName = 'spring-cloudinary'
 	version = '0.1.0'
 }
 
 dependencies {
-	
-	compile("org.springframework.boot:spring-boot-starter-web") {
-	exclude module: "spring-boot-starter-tomcat"
-	  }
-	  compile("org.springframework.boot:spring-boot-starter-jetty")
-	  // end::jetty[]
-	  // tag::actuator[]
-	  compile("org.springframework.boot:spring-boot-starter-actuator")
-	  // end::actuator[]
-  	//testCompile("junit:junit")
-  	testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
+	implementation("org.springframework.boot:spring-boot-starter-web") {exclude module: "spring-boot-starter-tomcat"}
+	implementation("org.springframework.boot:spring-boot-starter-jetty")  
+	implementation("org.springframework.boot:spring-boot-starter-actuator")
+  	testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
 	implementation('org.springframework.boot:spring-boot-starter-jdbc')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-validation')
@@ -59,6 +51,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.12.3'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.3'
+    testImplementation 'com.codeborne:selenide:6.1.1'
 }
 
 test {
