--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-web") {exclude module: "spring-boot-starter-tomcat"}
 	implementation("org.springframework.boot:spring-boot-starter-jetty")  
 	implementation("org.springframework.boot:spring-boot-starter-actuator")
-  	testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
 	implementation('org.springframework.boot:spring-boot-starter-jdbc')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-validation')
@@ -51,6 +50,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.12.3'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'com.codeborne:selenide:6.1.1'
 }
 
