--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.3'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'com.codeborne:selenide:6.1.1'
+	implementation 'commons-io:commons-io:2.11.0'
 }
 
 test {
