--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -16,11 +16,12 @@
     "firebase": "^9.8.2",
     "firebaseui": "^6.0.1",
     "firebaseui-ja": "^1.0.0",
+    "json-schema": "^0.4.0",
     "pinia": "^2.0.14",
     "roboto-fontface": "*",
+    "vite-plugin-vuetify": "^1.0.0-alpha.11",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15",
-    "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
@@ -29,7 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "@vitejs/plugin-vue": "^2.3.3",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.0",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.11",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
@@ -42,7 +43,6 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
-    "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-eslint-parser": "^9.0.2",
     "vue-tsc": "^0.34.7",
     "vuetify-loader": "^2.0.0-alpha.0"
