--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,9 +17,10 @@
     "firebaseui": "^6.0.1",
     "firebaseui-ja": "^1.0.0",
     "json-schema": "^0.4.0",
-    "pinia": "^2.0.14",
+    "pinia": "^2.0.0-rc.10",
     "roboto-fontface": "*",
     "vite-plugin-vuetify": "^1.0.0-alpha.11",
+    "vuetify": "^3.0.0-beta.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2",
@@ -43,6 +44,7 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-eslint-parser": "^9.0.2",
     "vue-tsc": "^0.34.7",
     "vuetify-loader": "^2.0.0-alpha.0"
