未認証時にフロントエンドにてリダイレクトするように実装を行った。そのほかの認証機能の実装途中。

--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,12 +17,12 @@
     "firebaseui": "^6.0.1",
     "firebaseui-ja": "^1.0.0",
     "json-schema": "^0.4.0",
-    "pinia": "^2.0.0-rc.10",
+    "pinia": "^2.0.14",
     "roboto-fontface": "*",
     "vite-plugin-vuetify": "^1.0.0-alpha.11",
-    "vuetify": "^3.0.0-beta.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15",
+    "vuetify": "^3.0.0-beta.0",
     "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
