--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ dependencies {
 	implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 	implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    runtimeOnly('org.springframework.boot:spring-boot-devtools')
+    implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'org.projectlombok:lombok:1.18.20'
+	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	runtimeOnly ('org.postgresql:postgresql')
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
