tomcatが起動しなかったのを修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=password
   app:
-    build: .
+    build: .images/app
     env_file:
       - ./.env
     tty: true
