--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@ CLOUD_API_KEY=
 CLOUD_NAME=
 CLOUD_API_SECRET=
 POSTGRES_USER=root
-POSTGRES_URL=jdbc:postgresql://localhost:5432/koala_mania
+POSTGRES_URL=jdbc:postgresql://postgres:5432/koala_mania
 POSTGRES_PASS=password
 TWITTER_API=
 TWITTER_SECRET=
